--- a/.drone.yaml
+++ b/.drone.yaml
@@ -19,7 +19,15 @@ steps:
     path: /tmp/.docker
   commands:
   - printenv
-  - echo "{\"auths\":{"${REGISTRY}":{\"auth\":"${KANIKO_CRED}"}}}" > /tmp/.docker/config.json
+  - cat <<EOF >>/tmp/.docker/config.json
+    {
+	    "auths": {
+	    	"https://${REGISTRY}": {
+	    		"auth": "${KANIKO_CRED}"
+        }
+	    }
+    }
+  - cat /tmp/.docker/config.json
 
 
 - name: Build and Push docker image
