--- a/.drone.yaml
+++ b/.drone.yaml
@@ -14,7 +14,7 @@ steps:
   - name: cred
     path: /tmp/.docker
   commands:
-  - base64 --decode ${KANIKO_CRED} > /tmp/.docker/config.json
+  - base64 --decode $KANIKO_CRED > /tmp/.docker/config.json
   - cat /tmp/.docker/config.json
 
 
