--- a/.drone.yaml
+++ b/.drone.yaml
@@ -5,35 +5,19 @@ name: git-tools
 
 steps:
 
-# - name: Prepare Credentials
-#   image: alpine:3.14
-#   environment:
-#     KANIKO_CRED:
-#       from_secret: KANIKO_CRED
-#   volumes:
-#   - name: cred
-#     path: /tmp/.docker
-#   commands:
-#   - echo ${KANIKO_CRED}
-#   - echo $KANIKO_CRED
-#   - echo -n "${KANIKO_CRED}" | base64 -d > /tmp/.docker/config.json
-#   - cat /tmp/.docker/config.json
-
 
 - name: Build and Push docker image
-  image: core-harbor.popoint.com.tw/library/drone-kaniko:v0.4
-  volumes:
-  - name: cred
-    path: /kaniko/.docker  
+  image: core-harbor.popoint.com.tw/library/drone-kaniko:v0.5
   environment:
-    KANIKO_CRED:
-      from_secret: KANIKO_CRED    
-    PLUGIN_TAGS: v0.1,v0.1-${DRONE_COMMIT_SHA:0:8}-${DRONE_BUILD_NUMBER},latest
-    PLUGIN_PASSWORD:
-      from_secret: HARBOR_TOKEN_ORIGIN
-    PLUGIN_USERNAME: "rbc_robot$drone"
-    PLUGIN_DOCKERFILE: "Dockerfile"
-    PLUGIN_REPO: "core-harbor.popoint.com.tw/popoint-dev/git-kustomize"
+    TAG: v0.1-${DRONE_COMMIT_SHA:0:8}-${DRONE_BUILD_NUMBER}
+    BASE64_TOKEN:
+      from_secret: HARBOR_RD_TOKENBASE64
+    REGISTRY_USER: "rbc_robot$drone"
+    DOCKERFILE_PATH: "Dockerfile"
+    REGISTRY: "core-harbor.popoint.com.tw"
+    PROJECT_ID: "popoint-dev"
+    IMAGE_PATH: "git-kustomize"
+
 
 - name: Send telegram notification
   image: appleboy/drone-telegram
