--- a/.drone.yaml
+++ b/.drone.yaml
@@ -15,9 +15,15 @@ steps:
     REGISTRY_USER: "rbc_robot$drone"
     DOCKERFILE_PATH: "Dockerfile"
     REGISTRY: "core-harbor.popoint.com.tw"
-    PROJECT_ID: "popoint-dev"
+    PROJECT_ID: "library"
     IMAGE_PATH: "git-kustomize"
-
+  commands:
+  - /drone-kaniko/entrypoint.sh
+  - cat /kaniko/.docker/config.json
+  - /drone-kaniko/executor --dockerfile=$DOCKERFILE_PATH \
+    --context=$KANIKO_CRED \
+    --destination "$REGISTRY/$PROJECT_ID/$IMAGE_PATH:$TAG" \
+    --context dir:/./
 
 - name: Send telegram notification
   image: appleboy/drone-telegram
