--- a/.drone.yaml
+++ b/.drone.yaml
@@ -20,7 +20,7 @@ steps:
   commands:
   - /drone-kaniko/entrypoint.sh
   - cat /kaniko/.docker/config.json
-  - ls -al
+  - ls -al /drone/src
   - /drone-kaniko/executor --dockerfile=$DOCKERFILE_PATH \
     --context=$KANIKO_CRED \
     --destination "$REGISTRY/$PROJECT_ID/$IMAGE_PATH:$TAG" \
