--- a/.drone.yaml
+++ b/.drone.yaml
@@ -21,9 +21,9 @@ steps:
   - /drone-kaniko/entrypoint.sh
   - cat /kaniko/.docker/config.json
   - ls -al /drone/src
-  - /drone-kaniko/executor --dockerfile=$DOCKERFILE_PATH \
-    --destination "$REGISTRY/$PROJECT_ID/$IMAGE_PATH:$TAG" \
-    --context dir:/./
+  - /drone-kaniko/executor --dockerfile=${DOCKERFILE_PATH} \
+    --destination="${REGISTRY}/$[PROJECT_ID}/${IMAGE_PATH}:${TAG}" \
+    --context=dir:/./
 
 - name: Send telegram notification
   image: appleboy/drone-telegram
