--- a/.drone.yaml
+++ b/.drone.yaml
@@ -21,10 +21,11 @@ steps:
   - /drone-kaniko/entrypoint.sh
   - cat /kaniko/.docker/config.json
   # - ls -al /drone/src
-  - /drone-kaniko/executor --help
-  # - /drone-kaniko/executor --dockerfile=${DOCKERFILE_PATH} \
-  #   --destination="${REGISTRY}/$[PROJECT_ID}/${IMAGE_PATH}:${TAG}" \
-  #   --context=dir:/./
+  # - /drone-kaniko/executor --help
+  - cat /kaniko/.docker/config.json
+  - /drone-kaniko/executor --dockerfile=${DOCKERFILE_PATH} \
+    --destination="${REGISTRY}/$[PROJECT_ID}/${IMAGE_PATH}:${TAG}" \
+    --context=dir://drone/src/
 
 - name: Send telegram notification
   image: appleboy/drone-telegram
