--- a/.drone.yaml
+++ b/.drone.yaml
@@ -23,7 +23,7 @@ steps:
   # - ls -al /drone/src
   # - /drone-kaniko/executor --help
   - /kaniko/executor --dockerfile ${DOCKERFILE_PATH} \
-    --destination "${REGISTRY}/$[PROJECT_ID}/${IMAGE_PATH}:${TAG}" \
+    --destination "${REGISTRY}/${PROJECT_ID}/${IMAGE_PATH}:${TAG}" \
     --context dir://drone/src/
 
 - name: Send telegram notification
