--- a/.drone.yaml
+++ b/.drone.yaml
@@ -22,9 +22,9 @@ steps:
   # - cat /kaniko/.docker/config.json
   # - ls -al /drone/src
   # - /drone-kaniko/executor --help
-  - /kaniko/executor --dockerfile=${DOCKERFILE_PATH} \
-    --destination=$REGISTRY/${PROJECT_ID}/${IMAGE_PATH}:${TAG} \
-    --context=dir://drone/src/
+  - /kaniko/executor --dockerfile $DOCKERFILE_PATH \
+    --destination "$REGISTRY/$PROJECT_ID/$IMAGE_PATH:$TAG" \
+    --context dir://drone/src/
 
 - name: Send telegram notification
   image: appleboy/drone-telegram
