--- a/.drone.yaml
+++ b/.drone.yaml
@@ -23,7 +23,7 @@ steps:
   # - echo "$REGISTRY/$PROJECT_ID/$IMAGE_PATH:$TAG"
   # - ls -al /drone/src
   # - /kaniko/executor --help
-  - /kaniko/executor -f $DOCKERFILE_PATH  -d "$REGISTRY/$PROJECT_ID/$IMAGE_PATH:$TAG"  -c dir://drone/src/
+  - /kaniko/executor -f $DOCKERFILE_PATH  -d "$REGISTRY/$PROJECT_ID/$IMAGE_PATH:$TAG"  -c dir://drone/src/ --cache
 
 - name: Send telegram notification
   image: appleboy/drone-telegram
