test: version 1.7 test

--- a/.drone.yaml
+++ b/.drone.yaml
@@ -7,7 +7,7 @@ steps:
 
 
 - name: Build and Push docker image
-  image: core-harbor.popoint.com.tw/library/drone-kaniko:v1.0
+  image: core-harbor.popoint.com.tw/library/drone-kaniko:v1.0-test
   environment:
     TAG: v1.0-${DRONE_COMMIT_SHA:0:8}-${DRONE_BUILD_NUMBER}
     BASE64_TOKEN:
@@ -19,10 +19,6 @@ steps:
     IMAGE_PATH: "git-kustomize"
   commands:
   - /workspace/entrypoint.sh
-  # - cat /kaniko/.docker/config.json
-  # - echo "$REGISTRY/$PROJECT_ID/$IMAGE_PATH:$TAG"
-  # - ls -al /drone/src
-  # - /kaniko/executor --help
   - /kaniko/executor -f $DOCKERFILE_PATH  -d "$REGISTRY/$PROJECT_ID/$IMAGE_PATH:$TAG"  -c dir://./ --cache
 
 - name: Send telegram notification
