--- a/.drone.yaml
+++ b/.drone.yaml
@@ -7,7 +7,7 @@ steps:
 
 
 - name: Build and Push docker image
-  image: core-harbor.popoint.com.tw/library/drone-kaniko:v1.0-test
+  image: core-harbor.popoint.com.tw/library/drone-kaniko:v1.1
   environment:
     TAG: v1.0-${DRONE_COMMIT_SHA:0:8}-${DRONE_BUILD_NUMBER}
     BASE64_TOKEN:
